# odsbox-seman

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: CLI.md  DEVELOPER.md
src/odsbox_seman/: __init__.py  cache.py  embedder.py  model_searcher.py  tokenizer.py  types.py
src/odsbox_seman/cli/: __init__.py  __main__.py  repl.py
tests/: conftest.py  test_nvh_model.py
tests/cli/: test_cli_parsing.py  test_cli_runtime.py
tests/data/: mdm_nvh_model.json
tests/integration/: test_search_integration.py
tests/unit/: test_cache.py  test_embedder.py  test_errors.py  test_searcher.py  test_tokenizer.py  test_types.py
